--- a/views/results.hbs
+++ b/views/results.hbs
@@ -1,7 +1,7 @@
 <main>
     <section class="titels">
         <h2>{{subtitle}}</h2>
-        <h1><span>{{title}}</span></h1>
+        <h1><span>'{{title}}'</span></h1>
     </section>
 
     <section class="resultaten">
