Added begin week2

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,8 +5,8 @@
 
     <section class="resultaten">
         {{#each objects}}
-            <article id="{{objectNumber}}">
-                <a href="/detail/{{objectNumber}}">
+            <article>
+                <a href="/detail/{{objectNumber}}" id="{{objectNumber}}">
                     <h3>{{title}}</h3>
                     <img src="{{webImage.url}}700">
                 </a>
