--- a/views/results.hbs
+++ b/views/results.hbs
@@ -7,7 +7,7 @@
     <section class="resultaten">
         {{#each objects}}
             <article>
-                <a href="/detail/{{objectNumber}}">
+                <a href="/detail/{{objectNumber}}" id="{{objectNumber}}">
                     <h3>{{title}}</h3>
                     <img src="{{webImage.url}}700">
                 </a>
