--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="/css/style.css">
     <link rel="manifest" href="/manifest.json">
-
+    <link rel="shortcut icon" href="#">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
