--- a/views/offline.hbs
+++ b/views/offline.hbs
@@ -1,7 +1,7 @@
 <main>
     <section class="titels">
         <h2>De website is offline</h2>
-        <h1>Helaas</h1>
+        <h1>Helaas...</h1>
     </section>
 </main>
 
