--- a/views/home.hbs
+++ b/views/home.hbs
@@ -10,6 +10,7 @@
                     <h3>{{title}}</h3>
                     <img src="{{webImage.url}}700">
                 </a>
+                <img src="images/bookmark.svg" bookmark bookmarkID="{{objectNumber}}">
             </article>
         {{/each}}
     </section>
