--- a/views/offline.hbs
+++ b/views/offline.hbs
@@ -1,7 +1,11 @@
 <main>
     <section class="titels">
-        <h2>De website is offline</h2>
-        <h1>Helaas...</h1>
+        <h2>{{subtitle}}</h2>
+        <h1>{{title}}</h1>
+    </section>
+
+    <section class="resultaten">
+        <img class="errorImg" src="../images/empty_frame.png">
     </section>
 </main>
 
