--- a/views/results.hbs
+++ b/views/results.hbs
@@ -11,6 +11,7 @@
                     <h3>{{title}}</h3>
                     <img src="{{webImage.url}}700">
                 </a>
+                <img src="images/bookmark.svg" favID="{{objectNumber}}">
             </article>
         {{/each}}
     </section>
