--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,3 +1,4 @@
 <header>
     <a href="/" ><img src="/images/rijks-library-logo.svg"></a>
+    <a href="/bookmarks"><img src="/images/bookmark_active.svg"></a>
 </header>
