--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -5,7 +5,7 @@
             <p>{{object.principalMaker}}, {{object.physicalMedium}}, {{object.dating.presentingDate}}</p>
         </header>
         <section>
-            <img src="{{object.webImage.url}}{{imgSize}}"> 
+            <img alt="{{object.label.title}}" src="{{object.webImage.url}}{{imgSize}}"> 
             <p>{{object.label.description}}</p> 
         </section>
     </article>
