--- a/views/offline.hbs
+++ b/views/offline.hbs
@@ -5,7 +5,7 @@
     </section>
 
     <section class="resultaten">
-        <img class="errorImg" src="../images/empty_frame.png">
+        <img alt="Empty frame error image" class="errorImg" src="../images/empty_frame.png">
     </section>
 </main>
 
