--- a/views/home.hbs
+++ b/views/home.hbs
@@ -8,14 +8,14 @@
             <article>
                 <a href="/detail/{{objectNumber}}" id="{{objectNumber}}">
                     <h3>{{title}}</h3>
-                    <img alt="{{title}}" src="{{webImage.url}}700" width="{{webImage.width}}" height="{{webImage.height}}" sizes="(max-width: 650px) 100vw,(min-width: 651px) 50vw,(min-width: 1101px) 25vw" 
-                        srcset="{{webImage.url}}700 700w,
+                    <img alt="{{title}}" src="{{#if webImage.url}}{{webImage.url}}700{{else}}/images/empty_frame.png{{/if}}" width="{{webImage.width}}" height="{{webImage.height}}" sizes="(max-width: 650px) 100vw,(min-width: 651px) 50vw,(min-width: 1101px) 25vw" 
+                        {{#if webImage.url}}srcset="{{webImage.url}}700 700w,
                         {{webImage.url}}600 600w,
                         {{webImage.url}}500 500w,
                         {{webImage.url}}400 400w,
                         {{webImage.url}}300 300w,
                         {{webImage.url}}200 200w,
-                        {{webImage.url}}100 100w" />
+                        {{webImage.url}}100 100w"{{/if}} />
                 </a>
                 <img alt="bookmark" src="images/bookmark.svg" bookmark bookmarkID="{{objectNumber}}">
             </article>
