--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,4 +1,4 @@
 <header>
-    <a href="/" ><img alt="Rijks Library Logo" src="/images/rijks-library-logo.svg"></a>
-    <a href="/bookmarks"><img alt="Bookmark" src="/images/bookmark_active.svg"></a>
+    <a href="/" ><img alt="Rijks Library Logo" height="32" width="165" src="/images/rijks-library-logo.svg"></a>
+    <a href="/bookmarks"><img alt="Bookmark" height="32" width="24" src="/images/bookmark_active.svg"></a>
 </header>
