--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,7 +10,7 @@
     <link rel="manifest" href="/manifest.json">
     <link rel="shortcut icon" href="/images/icons/favicon.ico">
 
-    <script defer type="module" src="/js/app.js"></script>
+    <script defer src="/js/app.js"></script>
 </head>
 <body>
     {{> header }}
